--- a/src/data/_exercises.scss
+++ b/src/data/_exercises.scss
@@ -1,54 +1,83 @@
 .typer {
-  &--41-0 {
-    font-size: 18px;
+  &--11-0 {
+    width: 90%;
+
+    &[name="one"] {
+      width: 70%;
+    }
+  }
+
+  &--12-0 {
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+  }
+
+  &--13-0 {
+    width: 100%;
+  }
+
+  &--14-0 {
+    width: 80%;
+
+    &[name="five"] {
+      width: 70%;
+    }
+  }
+
+  &--21-0 {
+    width: 90%;
+  }
+
+  &--25-0 {
+    width: 95%;
+    text-align: left;
+  }
+
+  &--36-0 {
     width: 100%;
     height: 100%;
     border-radius: 50%;
   }
 
-  &--52-0 {
-    width: 75%;
-    font-size: 2rem;
-    letter-spacing: 15px;
+  &--46-1 {
+    width: 100%;
+    height: 100%;
+    text-transform: uppercase;
+  }
+
+  &--66-0 {
+    width: 90%;
+
+    &[name="one"] {
+      width: 80%;
+    }
+  }
+
+  &--72-0 {
+    width: 80%;
   }
 }
 
 .checker {
-  &--11-0 {
+  &--27-0 {
     & + .labelChecker__answer {
-      width: 12%;
-      height: 40%;
+      width: 34%;
+      height: 90%;
     }
   }
 
-  &--29-0 {
+  &--32-0 {
     & + .labelChecker__answer {
-      width: 30%;
-      height: 18%;
+      width: 34%;
+      height: 90%;
     }
+  }
 
-    @at-root .page29 label[for="twotrue"] {
-      background-image: url(../img/checker--false.png);
-    }
-
-    @at-root .page29 label[for="twofalse"] {
-      background-image: url(../img/checker--true.png);
-    }
-
-    @at-root .page29 label[for="threetrue"] {
-      background-image: url(../img/checker--indeterminate.png);
-    }
-
-    @at-root .page29 label[for="threeindeterminate"] {
-      background-image: url(../img/checker--true.png);
-    }
-
-    @at-root .page29 label[for="fivetrue"] {
-      background-image: url(../img/checker--false.png);
-    }
-
-    @at-root .page29 label[for="fivefalse"] {
-      background-image: url(../img/checker--true.png);
+  &--73-0 {
+    & + .labelChecker__answer {
+      width: 24%;
+      height: 90%;
     }
   }
 }
@@ -65,5 +94,12 @@
     & + .labelPicker__answer {
       width: 19%;
     }
+  }
+}
+
+.page75 {
+  .foil,
+  .canvas-container {
+    background: transparent !important;
   }
 }
